Re-organize solution by grouping projects into new folders: MEAI, semantic-kernel

--- a/net-ai-beginer/practice-sk-azurefoundrylocal/appsettings.json
+++ b/net-ai-beginer/practice-sk-azurefoundrylocal/appsettings.json
@@ -1,5 +1,4 @@
 {
-  "PROJECT_KEY": "your_project_api_key",
-  "PROJECT_ENDPOINT": "your_project_endpoint",
-  "DEPLOYMENT_NAME": "your_deployment_name"
+  "Endpoint": "http://127.0.0.1:55290/v1",
+  "DeploymentName": "Phi-3.5-mini-instruct-generic-cpu"
 }
