--- a/net-ai-beginer/practice-sk-azurefoundrylocal/practice-chatcompletion-sk-foundrylocal.csproj
+++ b/net-ai-beginer/practice-sk-azurefoundrylocal/practice-chatcompletion-sk-foundrylocal.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.64.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.64.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.64.0" />
   </ItemGroup>
 
   <ItemGroup>
