--- a/net-ai-beginer/practice-sk-plugins-foundrylocal/practice-sk-plugins-foundrylocal.csproj
+++ b/net-ai-beginer/practice-sk-plugins-foundrylocal/practice-sk-plugins-foundrylocal.csproj
@@ -6,12 +6,15 @@
     <RootNamespace>practice_sk_plugins_foundrylocal</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>5cdfc659-0bbd-4fd5-9955-783404800172</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.64.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.Ollama" Version="1.45.0-alpha" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
