--- a/flowershop/flowershopbackend/FlowerShop.Api/FlowerShop.Api.csproj
+++ b/flowershop/flowershopbackend/FlowerShop.Api/FlowerShop.Api.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FlowerShop.Application\FlowerShop.Application.csproj" />
+    <ProjectReference Include="..\FlowerShop.Infrastructure\FlowerShop.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
